@@ -849,7 +849,6 @@ EltableAggregate(Dom : Type, Im : Type) : Category ==
 )abbrev category IXAGG IndexedAggregate
 ++ Author: Michael Monagan; revised by Manuel Bronstein and Richard Jenks
 ++ Date Created: August 87 through August 88
-++ Date Last Updated: April 1991
 ++ Basic Operations:
 ++ Related Constructors:
 ++ Also See:
@@ -930,7 +929,6 @@ IndexedAggregate(Index : Type, Entry : Type) : Category ==
           t := a.i
           qsetelt!(a, i, a.j)
           qsetelt!(a, j, t)
-          void
 
 )abbrev category TBAGG TableAggregate
 ++ Author: Michael Monagan, Stephen Watt; revised by Manuel Bronstein and Richard Jenks
