@@ -1047,7 +1047,6 @@ i.e., call
 )abbrev category DISTCAT DistributionCategory
 ++ Author: Franz Lehner lehner@math.tugraz.at, Waldek Hebisch
 ++ Date Created: 2009
-++ Date Last Updated: 19 June 2009
 ++ Fix History:
 ++ Basic Functions:
 ++ Related Constructors:
@@ -1065,7 +1064,7 @@ DistributionCategory(R : CommutativeRing) : Category == Exports where
   SUPR ==> SparseUnivariatePolynomial R
   SUPFR ==> SparseUnivariatePolynomial Fraction R
   Exports ==> SetCategory with
-    0 : () -> %
+    0 : constant -> %
       ++ \spad{0} is the Dirac distribution
     moment : (%, NNI) -> R
       ++ \spad{moment(x, n)} returns the n-th moment
