@@ -178,7 +178,6 @@ SequentialDifferentialVariable(S : OrderedSet) : DifferentialVariableCategory(S)
 )abbrev category DPOLCAT DifferentialPolynomialCategory
 ++ Author:  William Sit
 ++ Date Created: 19 July 1990
-++ Date Last Updated: 13 September 1991
 ++ Basic Operations: PolynomialCategory
 ++ Related Constructors: DifferentialVariableCategory
 ++ See Also:
@@ -332,7 +331,7 @@ DifferentialPolynomialCategory(R : Ring, S : OrderedSet,
       d
 
     weights p ==
-      ws : List NonNegativeInteger := nil
+      ws : List NonNegativeInteger := []
       empty? (mp := monomials p) => ws
       for lp in mp repeat
         lv := variables lp
@@ -346,7 +345,7 @@ DifferentialPolynomialCategory(R : Ring, S : OrderedSet,
       "max"/ws
 
     weights (p, s) ==
-      ws : List NonNegativeInteger := nil
+      ws : List NonNegativeInteger := []
       empty?(mp := monomials p) => ws
       for lp in mp repeat
         lv := [v for v in variables lp | (variable v) = s ]
@@ -387,7 +386,7 @@ DifferentialPolynomialCategory(R : Ring, S : OrderedSet,
         ordp := order p
         vl  := concat [[makeVariable(s, j)$V for j in  0..ordp]
                                 for s in sl]$List(List V)
-        rrl := nil$List(R)
+        rrl := []$List(R)
         for r in rl repeat
           t := r
           rrl := concat(rrl,
@@ -398,7 +397,7 @@ DifferentialPolynomialCategory(R : Ring, S : OrderedSet,
         ordp := order p
         vl  := concat [[makeVariable(s, j)$V for j in  0..ordp]
                                 for s in sl]$List(List V)
-        rrl := nil$List(%)
+        rrl := []$List(%)
         for r in rl repeat
           t := r
           rrl := concat(rrl,
